--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
               python-version: '3.10'
 
           - name: Install dependencies
-            run: pip install -r requirments.txt
+            run: pip install -r requirements.txt
               
 
           - name: get data from API
